--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
   </properties>
 
   <dependencies>
+  
+  
+  
+	<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.48.2</version>
+    </dependency>  
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
