--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,21 @@
         <version>2.48.2</version>
     </dependency>  
     
+    
+    <!-- <dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.9.4</version>
+			</dependency> -->
+		 
+    
+	<dependency> 
+		<groupId>io.appium</groupId>
+		<artifactId>java-client</artifactId>
+		<version>3.4.1</version>
+
+	</dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
